# ha-todo-publisher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
deploy/: deployment.yaml  ingress.example.yaml  namespace.yaml  secret.example.yaml  service.yaml
src/: main.rs
