[package]
name = "ha-todo-publisher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Push-based Home Assistant todo publisher with scoped webhook tokens and read access control"
repository = "https://github.com/clawdy00/ha-todo-publisher"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "tokio", "http1"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
